Show name correction

--- a/data_filtering/README
+++ b/data_filtering/README
@@ -1,4 +1,4 @@
-The datasets used in this example are based off the Great British Baking Show.
+The datasets used in this example are based off the Great British Bake Off.
 The data was originally made available through the Comprehensive R Archive Network (CRAN)
 as the [bakeoff package](https://cran.r-project.org/web/packages/bakeoff/index.html).
 
